--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <!-- Background Music -->
 <audio id="bgMusic" loop autoplay hidden>
-  <source src="https://github.com/gitsaurs/hbd_chlo/blob/f7f5aee395f46327aad64e47ebb40ffb833e59ad/hbd.mp3" type="audio/mpeg">
+  <source src="hbd-paps.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
