--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <!-- Background Music -->
 <audio id="bgMusic" loop autoplay hidden>
-  <source src="hbd-paps.mp3" type="audio/mpeg">
+  <source src="https://files.catbox.moe/l39qr3.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
